--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trainkoi",
+  "name": "map-mastering",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start": "npx expo start",
